👮✍️ Checkpoint ./server.js:44341290/404 ./views/home.html:44341290/297

--- a/views/home.html
+++ b/views/home.html
@@ -138,12 +138,9 @@
     var azione 
     const filtroEsame   = false;
     const filtroEmail   = false;
+    const changeValue   = null;
     
     //valori di default nel momento del caricamento della pagina
-    const defaultFilter = 0;
-    const defaultSearchValue = null;
-    const changeValue = null;
-    
     localStorage.setItem("defaultIdTutor", 0)
     localStorage.setItem("defaultFilter", 0);
     localStorage.setItem("defaultSearchValue", null);
@@ -242,6 +239,8 @@
       .catch(e => {
           console.log(e);
       });
+      //setto la variabile action l valore di default
+      sessionStorage.setItem("searchValue", localStorage.defaultSearchValue);
       //pulisce la form
       document.getElementById("searchTutor").reset();
     }
